opentelemetry/simpleroute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: bookingroute
  namespace: booking
spec:
  parentRefs:
    - name: bookinfo-gateway
  rules:
    - backendRefs:
        - name: frontend-proxy
          port: 8080
---
